2010-12-06  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* soap-client.el (soap-l2wk): comment out warning about not
	finding a well known namespace, it seems to happen too oftern for
	benign cases...
	(soap-xml-get-children1, soap-xml-get-attribute-or-nil1): install
	a local namespace table via `soap-with-local-xmlns', it seems to
	be needed for some responses.
	(soap-resolve-references-for-operation): always try to intern
	elements in the PARAMETER-ORDER list.
	(soap-parse-response): replace assert with an error message
	(soap-with-local-xmlns): don't change `*soap-default-xmlns*'
	unless we have a non nil value

2010-12-05  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* soap-client.el (soap-l2wk): don't report an error if there's no
	default namespace, instead, return the unqualified name.
	(soap-l2fq): new argument, USE-TNS
	(soap-parse-wsdl, soap-parse-sequence)
	(soap-parse-complex-type-complex-content, soap-parse-message)
	(soap-parse-operation, soap-parse-binding): passs 'USE-TNS to
	`soap-l2fq'

2010-12-04  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* soap-inspect.el (soap-inspect-port): use just the port name (not
	the fq name)

	* soap-client.el (*soap-well-known-xmlns*): added some new
	namespaces
	(*soap-target-xmlns*): new variable
	(soap-l2wk): new function
	(soap-l2fq): use *soap-target-xmlns* if name is unqualified
	(soap-extract-xmlns): return the targetNamespace in addition to
	the default namespace
	(soap-with-local-xmlns): bind *soap-target-xmlns*
	(soap-get-target-namespace, soap-xml-get-children1)
	(soap-xml-get-attribute-or-nil1): new functions
	(soap-resolve-references-for-operation): don't intern the elements
	of parameter-order, if we just created it
	(soap-parse-wsdl, soap-parse-schema, soap-parse-schema-element)
	(soap-parse-complex-type, soap-parse-sequence)
	(soap-parse-complex-type-complex-content, soap-parse-message)
	(soap-parse-port-type, soap-parse-operation, )
	(soap-parse-binding, soap-decode-type, soap-decode-any-type)