@@ -1,3 +1,9 @@
+2011-01-03  Alex Harsanyi  <AlexHarsanyi@gmail.com>
+
+	* soap-client.el (soap-xml-get-children1)
+	(soap-xml-get-attribute-or-nil1): use `ignore-errors' on
+	`soap-l2wk'
+
 2010-12-06  Alex Harsanyi  <AlexHarsanyi@gmail.com>
 
 	* soap-client.el (soap-l2wk): comment out warning about not
